Fix text align of dropdown in icon menu

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -235,6 +235,7 @@
 /* Menu Items */
 .ui.menu .ui.dropdown .menu > .item {
   margin: 0;
+  text-align: left;
   font-size: @dropdownItemFontSize !important;
   padding: @dropdownItemPadding !important;
   background: @dropdownItemBackground !important;
